# mac-cross-build

./: CMakeLists.txt  README.md  main.cpp
toolchains/: aarch64-linux-gnu.toolchain.cmake
